# CryptoAutoTrade

./: .gitignore  pyproject.toml
src/: check_accout.py  check_asset.py  check_order.py  check_price.py  fetch_ohlc.py  order_buy.py  order_sell.py  show_order.py
src/VolatilityBreakout/: calc_targetprice.py  optimize_k.py  vb_buy.py  vb_sell.py
